# RISC-Simulator

./: .gitignore  CMakeLists.txt  Context.h  Makefile  README.md  RISC-V-Sim  Simulator.h  Types.h
include/: Simulator.h
include/instruction-handlers/: IHandler.h
include/instruction-types/: BitReader.h  IType.h
instruction-handlers/: .IHandler.h.swp  IHandler.h
instruction-types/: IType.h  IType.h.gch  RFormat.h  SType.h
src/: Memory.cpp  Memory.h  Program.h  Simulator.cpp  Simulator.h  Types.h  main.cpp
src/instruction-handlers/: BHandler.cpp  BHandler.h  IHandler.cpp  IHandler.h  RHandler.cpp  RHandler.h  SHandler.cpp  SHandler.h
src/instruction-types/: BType.h  BitReader.h  IType.h  RFormat.h  RType.h  SType.h  UType.h
tests/task3/: memory.s
